kubernetes/kustomizations/external-dns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
